--- a/roles/app-install/tasks/main.yaml
+++ b/roles/app-install/tasks/main.yaml
@@ -71,3 +71,7 @@
     name: spotify
     state: present
 
+- name: "Install Chrome"
+  community.general.homebrew:
+    name: chrome
+    state: present
