--- a/roles/app-install/tasks/main.yaml
+++ b/roles/app-install/tasks/main.yaml
@@ -75,3 +75,8 @@
   community.general.homebrew_cask:
     name: google-chrome
     state: present
+
+- name: "Install Slack"
+  community.general.homebrew_cask:
+    name: slack
+    state: present
