--- a/roles/app-install/tasks/main.yaml
+++ b/roles/app-install/tasks/main.yaml
@@ -60,6 +60,7 @@
   community.general.homebrew_cask:
     name: alfred
     state: present
+  register: install_alfred
 
 - name: "Install Evernote"
   community.general.homebrew_cask:
