--- a/roles/app-install/tasks/main.yaml
+++ b/roles/app-install/tasks/main.yaml
@@ -76,8 +76,10 @@
   community.general.homebrew_cask:
     name: google-chrome
     state: present
+  ignore_errors: true
 
 - name: "Install Slack"
   community.general.homebrew_cask:
     name: slack
     state: present
+  ignore_errors: true
