--- a/roles/system-prefs/tasks/main.yaml
+++ b/roles/system-prefs/tasks/main.yaml
@@ -141,3 +141,43 @@
     type: float
     value: 33
   notify: Restart Dock
+
+- name: "Show status bar in Finder"
+  community.general.osx_defaults:
+    domain: com.apple.finder
+    key: ShowStatusBar
+    type: int
+    value: 1
+
+
+# Bind apps to all spaces
+
+- name: "Add app-bindings dict to com.apple.spaces"
+  shell:
+    cmd: '/usr/libexec/PlistBuddy -c "add app-bindings dict" ~/Library/Preferences/com.apple.spaces.plist'
+  register: result
+  check_mode: false
+  changed_when: result == 0
+  failed_when: result.rc != 0
+  ignore_errors: yes
+
+- name: "Remove any current app:space bindings"
+  shell:
+    cmd: "/usr/libexec/PlistBuddy -c 'delete app-bindings:{{ item }}' ~/Library/Preferences/com.apple.spaces.plist"
+  register: result
+  check_mode: false
+  changed_when: result == 0
+  failed_when: result.rc != 0
+  with_items: 
+    - "{{ all_space_apps }}"
+  ignore_errors: yes
+
+- name: "Bind apps to all spaces"
+  shell:
+    cmd: "/usr/libexec/PlistBuddy -c 'add app-bindings:{{ item }} string AllSpaces' ~/Library/Preferences/com.apple.spaces.plist"
+  register: result
+  check_mode: false
+  changed_when: result == 0
+  failed_when: result.rc != 0
+  with_items: 
+    - "{{ all_space_apps }}"
