--- a/roles/pre-check/tasks/main.yaml
+++ b/roles/pre-check/tasks/main.yaml
@@ -4,7 +4,7 @@
   register: result
   check_mode: false
   changed_when: false
-  ignore_errors: yes
+  ignore_errors: true
 
 - name: "Please log into iCloud before continuing"
   ansible.builtin.pause:
