--- a/ansible.env
+++ b/ansible.env
@@ -2,3 +2,4 @@ PRIVATE_BREW_TAP_NAME="op://Work/Private Brew Tap/add more/tap name"
 PRIVATE_BREW_TAP_URL="op://Work/Private Brew Tap/add more/tap url"
 PRIVATE_BREW_TAP_NAME_2="op://Work/Private Brew Tap 2/add more/tap name"
 PRIVATE_BREW_TAP_URL_2="op://Work/Private Brew Tap 2/add more/tap url"
+HUMIO_MACOS_LOGS_TOKEN="op://Home Network/Humio MacOS Logs Ingest Token/credential"
