--- a/roles/app-install/tasks/main.yaml
+++ b/roles/app-install/tasks/main.yaml
@@ -39,6 +39,26 @@
     name: iterm2
     state: present
 
+- name: "Install Yarn"
+  community.general.homebrew_cask:
+    name: yarn
+    state: present
+
+- name: "Install npm"
+  community.general.homebrew_cask:
+    name: npm
+    state: present
+
+- name: "Install flash drive CLI tool"
+  community.general.homebrew_cask:
+    name: flash
+    state: present
+
+- name: "Install pv tool"
+  community.general.homebrew_cask:
+    name: pv
+    state: present
+
 - name: "Install Rectangle"
   community.general.homebrew_cask:
     name: rectangle
@@ -88,6 +108,11 @@
     name: telnet
     state: present
 
+- name: "Install Python 3.12"
+  community.general.homebrew:
+    name: python@3.12
+    state: present
+
 - name: "Install Golang"
   community.general.homebrew:
     name: golang
@@ -111,11 +136,6 @@
 - name: "Install istioctl"
   community.general.homebrew:
     name: istioctl
-    state: present
-
-- name: "Install fzf"
-  community.general.homebrew:
-    name: fzf
     state: present
 
 - name: "Install fzf"
@@ -313,6 +333,11 @@
   community.general.homebrew:
     name: touch2sudo
     state: present
+  when: personal_machine
+
+- name: Configure log shipping
+  include_tasks:
+    file: logging.yaml
   when: personal_machine
 
 # Install font for iTerm
